add the ability to filter images by specific size

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,12 @@
 				<button id="toggle-grayscale" class="btn btn-primary my-2">Toggle Grayscale</button>
                 <a id="next-page" href="" class="btn btn-secondary my-2 d-none">Next Page</a>
 			</p>
+			<p class="lead text-muted">Or filter images by specific size</p>
+			<div class="form-inline justify-content-center">
+				<input id="width"  type="number" step="1" min="1" class="form-control mb-2 mr-sm-2" placeholder="width">
+				<input id="height" type="number" step="1" min="1" class="form-control mb-2 mr-sm-2" placeholder="height">
+				<button id="filter" class="btn btn-primary mb-2">Filter</button>
+			</div>
 		</div>
 	</section>
 	<div class="album py-5 bg-light">
